# AirPort-Project

./: .gitignore  Edge Computing.md  Makefile  README.md  Relatório do Projeto.md  docker-compose.yml
LastWill_RetainFlag/: .env.example  README.md  broker.js  package-lock.json  package.json  pubSensores.js  subSensores.js  validate-lwt-retain.js
backend-fastapi/: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend-fastapi/alembic/: env.py
backend-fastapi/alembic/versions/: 20260308_0001_initial_gazepilot.py
backend-fastapi/app/: __init__.py  main.py  worker.py
backend-fastapi/app/api/: calibration.py  devices.py  frames.py  health.py  readings.py  reports.py  router.py  sessions.py  ws.py
backend-fastapi/app/core/: config.py
backend-fastapi/app/db/: session.py
backend-fastapi/app/models/: __init__.py  entities.py  sensor.py
backend-fastapi/app/schemas/: __init__.py  calibration.py  common.py  devices.py  frames.py  health.py  reports.py  sessions.py
backend-fastapi/app/services/: __init__.py  commands_engine.py  cv_pipeline.py  device_auth.py  frame_pipeline.py  frame_preview.py  frame_queue.py  frame_rate.py  gaze_mapper.py  influx.py  ws.py  ws_hub.py
backend-fastapi/models/: .gitkeep
backend-fastapi/scripts/: download_face_landmarker.py
backend-fastapi/tests/: conftest.py  test_commands_engine.py  test_frames.py  test_gaze_mapper.py  test_health.py  test_sessions.py  test_websocket.py
browser-extension/: README.md  background.js  content.js  manifest.json
(+94 files in other folders)
